--- a/index.html
+++ b/index.html
@@ -77,13 +77,14 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
-    };
+    apiKey: "AIzaSyCKa06jdbawt_HuzoYNpmzWDM3cxk7KDGU",
+    authDomain: "fichalegal-5a805.firebaseapp.com",
+    projectId: "fichalegal-5a805",
+    storageBucket: "fichalegal-5a805.appspot.com",
+    messagingSenderId: "848823275144",
+    appId: "1:848823275144:web:4027de924f0cc07d1b593d",
+    measurementId: "G-WS1Z2QNQE3"
+  };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
